2004-02-20  Arvind Samptur <arvind.samptur@wipro.com>

	* bonobo/bonobo-ui-internal-toolbar.c:
	(impl_style_changed): Propogate this further up
	to the parent class

2004-02-20  Arvind Samptur <arvind.samptur@wipro.com>

	* bonobo/bonobo-ui-sync-toolbar.c: (toolbar_style_changed): bin this
	(set_attributes_on_child)
	(toolbar_get_children): move these to
	bonobo/bonobo-ui-internal-toolbar.c

	* bonobo/bonobo-ui-internal-toolbar.c:
	(bonobo_ui_internal_toolbar_get_children):
	(impl_style_changed):
	(impl_orientation_changed):
	Instead of g_signal_connect() it is better this way.

2004-02-20  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): add extra in-proc tests.

2004-02-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_update_root): bin hvlook
	properties.
	(bonobo_ui_sync_toolbar_get_look, parse_look): upd. to
	use GtkToolbarStyle enums.
	(impl_bonobo_ui_sync_toolbar_state): axe min_width.

	* bonobo/bonobo-ui-preferences.c
	(bonobo_ui_preferences_get_toolbar_style): use Gtk enum.
	(keys_changed_fn): use g_idle_add.

	* bonobo/bonobo-ui-config-widget.c (set_values):
	update to use gtk enum values.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_set_image): multi-head safe fix.

	* bonobo/bonobo-ui-sync-toolbar.c
	(toolbar_orientation_changed): remove
	(toolbar_style_changed): fix leak.
	(bonobo_ui_sync_toolbar_init): prune all priv-> setup.
	(set_attributes_on_child): take gtk+ style enum.

	* bonobo/bonobo-ui-sync-toolbar.c
	(toolbar_get_children): re-work slightly.
	(toolbar_build_item, toolbar_build_button_item): factor out
	common code from (toolbar_build_control), and slave
	parent/child lifecycle to avoid problems elsewhere.

	* bonobo/bonobo-ui-internal-toolbar.c: implement - sub-class
	the GtkToolbar and provide a nasty hack to allow preferred
	width/height calculation. Add is_floating and orientation
	properties to avoid hacks elsewhere.
